Kubernetes/Traefik-2/aplicacao/ingressroute-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`20.190.208.221.nip.io`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-tls
  namespace: dev
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`20.190.208.221.nip.io`)
      kind: Rule
      services:
        - name: nginx-service
          port: 80
  tls:
    secretName: confrariadocodigotecnologia-com-secret
